# ChangeLog for x11-misc/baekmuk-fonts
# Copyright 2002 Gentoo Technologies, Inc.; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/x11-misc/baekmuk-fonts/ChangeLog,v 1.6 2002/12/13 11:00:54 blizzy Exp $

  06 Dec 2002; Rodney Rees <manson@gentoo.org> : changed sparc ~sparc keywords
 
*baekmuk-fonts-2.0-r1 (11 Jul 2002)

  21 Oct 2002; Calum Selkirk <cselkirk@gentoo.org> baekmuk-fonts-2.0-r1.ebuild :

  Added ppc to KEYWORDS.

  11 Jul 2002; Jays Kwak <jayskwak@gentoo.org> baekmuk-fonts-2.0-r1 :
  move TTF font path to /usr/share/fonts/ttf/korean/baekmuk for GNOME2 AA font