@@ -1,14 +1,21 @@
 # ChangeLog for x11-misc/baekmuk-fonts
 # Copyright 2002 Gentoo Technologies, Inc.; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/x11-misc/baekmuk-fonts/ChangeLog,v 1.6 2002/12/13 11:00:54 blizzy Exp $
+# $Header: /var/cvsroot/gentoo-x86/x11-misc/baekmuk-fonts/ChangeLog,v 1.7 2002/12/17 04:18:17 seo Exp $
 
-  06 Dec 2002; Rodney Rees <manson@gentoo.org> : changed sparc ~sparc keywords
+*baekmuk-fonts-2.1 (17 Dec 2002)
+  
+  17 Dec 2002; Jungmin Seo <seo@gentoo.org> baekmuk-fonts-2.1.ebuild, files/digest-baekmuk-fonts-2.1, Changelog :
+
+  version bump
  
 *baekmuk-fonts-2.0-r1 (11 Jul 2002)
+
+  06 Dec 2002; Rodney Rees <manson@gentoo.org> : changed sparc ~sparc keywords
 
   21 Oct 2002; Calum Selkirk <cselkirk@gentoo.org> baekmuk-fonts-2.0-r1.ebuild :
 
   Added ppc to KEYWORDS.
 
   11 Jul 2002; Jays Kwak <jayskwak@gentoo.org> baekmuk-fonts-2.0-r1 :
+
   move TTF font path to /usr/share/fonts/ttf/korean/baekmuk for GNOME2 AA font
